# Satellite-Monitoring-System

./: .gitignore  CMakeLists.txt  requirements.txt
config/: alert_config.json  monitoring_config.json  satellite_config.json
scripts/: build.sh  run_analysis.py  run_monitoring.sh
